javascript/ql/test/query-tests/NodeJS/InvalidExport/tst4.js
module.exports.a = 23; // OK
module.exports = 56; // OK
